--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta http-eqiv="refresh" content="url= https://github.com/HawemoX">
+   <meta http-eqiv="refresh" content="0; url= https://github.com/HawemoX">
  </head>
 </html>
