--- a/NewTab/index.html
+++ b/NewTab/index.html
@@ -55,9 +55,9 @@
          <li class="child">
           <ul>
            <li><p>Other</p></li>
-           <li><a id="love" style="color: var(--text)" href="https://reddit.com">GitHub</a></li>
-           <li><a id="twitter" style="color: var(--text)" href="https://twitter.com">ArchWiki</a></li>
-           <li><a id="iris" style="color: var(--text)" href="https://discord.com">Discord</a></li>
+           <li><a id="love" style="color: var(--text)" href="https://github.com">GitHub</a></li>
+           <li><a id="pine" style="color: var(--text)" href="https://wiki.archlinux.org/">ArchWiki</a></li>
+           <li><a id="iris" style="color: var(--text)" href="https://flagle-game.com/">Flagle</a></li>
           </ul>
          </li>
         </ul>
