--- a/NewTab/index.html
+++ b/NewTab/index.html
@@ -41,6 +41,7 @@
             <li><p>Learn</p></li>
             <li><a id="iris" style="color: var(--text)" href="https://udemy.com">Udemy</a></li>
             <li><a id="pine" style="color: var(--text)" href="https://freecodecamp.org">FreeCodeCamp</a></li>
+            <li><a id="foam" style="color: var(--text)" href="https://duolingo.com/">Duolingo</a></li>
             <li><a id="gold" style="color: var(--text)" href="https://app.memrise.com">Memrise</a></li>
           </ul>
          </li>
