--- a/NewTab/index.html
+++ b/NewTab/index.html
@@ -14,7 +14,7 @@
         <span id="hours">69</span><span>:</span><span id="minutes">420</span>
        </div>
        <div class="greet">
-        <h0 id="greetigns">Welcome @HawemoX</h0>
+        <h0 id="greetigns"> ~ ❯ Welcome @HawemoX</h0>
        </div>
        <br>
        <div class="form">
