--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta http-equiv="refresh" content="0; url=https://github.com/HawemoX" />
+   <meta http-equiv="refresh" content="0; url=https://docs.google.com/document/d/1foQv1RLwcSjYAuLZhhe0nLqJUgF0EqVV_URpbwDExTM/edit?usp=sharing" />
  </head>
 </html>
