--- a/codes/index.html
+++ b/codes/index.html
@@ -28,27 +28,28 @@
             background-color: white;
             border: 8px solid black;  /* Thicker border to mimic Pokémon TCG cards */
             border-radius: 20px;  /* More rounded corners */
-            padding: 20px;
-            width: 450px;  /* Wider card to better fit QR code and text */
+            padding: 30px;  /* Increased padding for a larger look */
+            width: 600px;  /* Larger card width */
+            height: 200px; /* Set a larger height */
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);  /* Stronger shadow for depth */
             margin-bottom: 20px;
         }
 
         .qr-code {
-            margin-right: 20px;
+            margin-right: 30px;  /* More space between QR code and text */
         }
 
         .code-text {
-            font-size: 20px;  /* Slightly larger text for better readability */
+            font-size: 28px;  /* Larger text for readability */
             font-weight: bold;
             text-align: left;
         }
 
         button {
-            padding: 10px 20px;
+            padding: 12px 24px;
             font-size: 16px;
             cursor: pointer;
-            background-color: black;
+            background-color: black; /* Changed button color to black */
             color: white;
             border: none;
             border-radius: 5px;
@@ -56,7 +57,25 @@
         }
 
         button:hover {
-            background-color: #333;
+            background-color: #333; /* Darker color on hover */
+        }
+
+        /* "Do Not Press" button styling */
+        .reset-button {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            padding: 10px;
+            background-color: black; /* Set the "Do Not Press" button to black */
+            color: white;
+            border: none;
+            border-radius: 5px;
+            font-size: 14px;
+            cursor: pointer;
+        }
+
+        .reset-button:hover {
+            background-color: #333; /* Darker on hover */
         }
 
         /* Center the content on smaller screens */
@@ -66,6 +85,7 @@
                 align-items: center;
                 padding: 15px;
                 width: 90%;
+                height: auto; /* Remove fixed height for smaller screens */
             }
 
             .qr-code {
@@ -79,6 +99,9 @@
     </style>
 </head>
 <body>
+
+<!-- "Do Not Press" Button in the top-left corner -->
+<button class="reset-button" onclick="resetCodes()">Do Not Press</button>
 
 <div class="container">
     <!-- Code display section -->
@@ -136,11 +159,20 @@
         new QRious({
             element: qrCanvas,
             value: randomCode,
-            size: 120  // Slightly larger QR code for better proportion
+            size: 140  // Slightly larger QR code for better proportion
         });
+    }
+
+    // Function to reset localStorage (Triggered by "Do Not Press" button)
+    function resetCodes() {
+        if (confirm("Are you sure you want to reset the codes?")) {
+            localStorage.removeItem("remainingCodes");
+            codes = initialCodes; // Reset codes array to the initial list
+            alert("All codes have been reset!");
+            location.reload(); // Reload the page to reset the display
+        }
     }
 </script>
 
 </body>
 </html>
-
