--- a/codes/index.html
+++ b/codes/index.html
@@ -3,57 +3,164 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code Redeemer</title>
+    <title>QR Code Generator</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f9f9f9;
-            margin: 0;
-            padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
+            background-color: #f0f0f0;
+            margin: 0;
+            position: relative; /* Added to position the remaining codes counter */
         }
-        .app-container {
+
+        .container {
+            background-color: transparent;
+            text-align: center;
+        }
+
+        /* Card styling */
+        .card {
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
             background-color: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 400px;
-            position: relative;
+            border: 8px solid black;  /* Thicker border to mimic Pokémon TCG cards */
+            border-radius: 20px;  /* More rounded corners */
+            padding: 30px;  /* Increased padding for a larger look */
+            width: 300px;  /* Width of individual card */
+            height: 200px; /* Height of individual card */
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);  /* Stronger shadow for depth */
+            margin: 15px;  /* Space between cards in the grid */
         }
-        .code-counter {
+
+        .qr-code {
+            margin-right: 30px;  /* More space between QR code and text */
+        }
+
+        .code-text {
+            font-size: 28px;  /* Larger text for readability */
+            font-weight: bold;
+            text-align: left;
+        }
+
+        button {
+            padding: 12px 24px;
+            font-size: 16px;
+            cursor: pointer;
+            background-color: black; /* Changed button color to black */
+            color: white;
+            border: none;
+            border-radius: 5px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin-top: 10px; /* Margin for the button */
+        }
+
+        button:hover {
+            background-color: #333; /* Darker color on hover */
+        }
+
+        /* "Do Not Press" button styling */
+        .reset-button {
             position: absolute;
             top: 10px;
-            right: 10px;
-            font-weight: bold;
-        }
-        .code-list {
-            list-style: none;
-            padding: 0;
-            margin-top: 20px;
-        }
-        .code-item {
-            background-color: #e7e7e7;
+            left: 10px;
             padding: 10px;
-            margin-bottom: 5px;
+            background-color: black; /* Set the "Do Not Press" button to black */
+            color: white;
+            border: none;
             border-radius: 5px;
-            font-family: monospace;
+            font-size: 14px;
+            cursor: pointer;
+        }
+
+        .reset-button:hover {
+            background-color: #333; /* Darker on hover */
+        }
+
+        /* Grid for displaying multiple cards */
+        .grid {
+            display: flex;
+            flex-wrap: wrap;  /* Allow cards to wrap onto the next line */
+            justify-content: center; /* Center cards */
+            margin-top: 20px; /* Space above grid */
+        }
+
+        /* Styling for the number input */
+        input[type="number"] {
+            padding: 12px 24px; /* Same padding as button */
+            font-size: 16px; /* Same font size as button */
+            border: 2px solid black; /* Black border */
+            border-radius: 5px; /* Same border radius as button */
+            margin-left: 10px; /* Space between input and button */
+            background-color: white; /* White background */
+            color: black; /* Black text */
+        }
+
+        input[type="number"]:focus {
+            outline: none; /* Remove outline on focus */
+            border-color: #555; /* Darker border color on focus for visibility */
+        }
+
+        /* Counter styling */
+        .remaining-codes {
+            position: absolute; /* Position it at the top right */
+            top: 10px;
+            right: 10px;
+            background-color: white; /* White background for readability */
+            padding: 10px;
+            border: 2px solid black; /* Black border */
+            border-radius: 5px;
+            font-size: 16px; /* Font size for remaining codes */
+            font-weight: bold;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Subtle shadow */
+        }
+
+        /* Center the content on smaller screens */
+        @media (max-width: 500px) {
+            .card {
+                flex-direction: column;
+                align-items: center;
+                padding: 15px;
+                width: 90%;
+                height: auto; /* Remove fixed height for smaller screens */
+            }
+
+            .qr-code {
+                margin: 0 0 15px 0;
+            }
+
+            .code-text {
+                text-align: center;
+            }
         }
     </style>
 </head>
 <body>
 
-<div class="app-container">
-    <div class="code-counter">Remaining Codes: <span id="codeCount"></span></div>
-    <ul class="code-list" id="codeList">
-        <!-- Code items will be injected here -->
-    </ul>
+<!-- "Do Not Press" Button in the top-left corner -->
+<button class="reset-button" onclick="resetCodes()">Do Not Press</button>
+
+<!-- Remaining codes counter -->
+<div class="remaining-codes" id="remainingCodesCounter"></div>
+
+<div class="container">
+    <!-- Input for number of codes to generate -->
+    <div>
+        <input type="number" id="numCodes" min="1" max="5" value="1"> <!-- Removed label -->
+        <button onclick="generateMultipleQRCodes()">Generate QR Codes</button>
+    </div>
+
+    <!-- Code display section -->
+    <div id="codeGrid" class="grid"></div>
 </div>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/qrious/4.0.2/qrious.min.js"></script>
 <script>
-    const codes = [
+    // Predefined list of codes
+    let initialCodes = [
     "6PG-HJQN-4JM-XX7",
   "D72-7HTM-6C2-GNQ",
   "LPC-CXJD-Q66-7X6",
@@ -362,27 +469,88 @@
   "XW7-29DV-XW4-2TB"
     ];
 
+    // Load remaining codes from localStorage or use initial list if not present
+    let codes = JSON.parse(localStorage.getItem("remainingCodes")) || initialCodes;
 
-    // Inject the codes into the HTML
-    const codeList = document.getElementById('codeList');
-    const codeCount = document.getElementById('codeCount');
-
-    // Function to update the code list and counter
-    function updateCodeList() {
-        codeList.innerHTML = ''; // Clear the list
-        codes.forEach(code => {
-            const li = document.createElement('li');
-            li.className = 'code-item';
-            li.textContent = code;
-            codeList.appendChild(li);
-        });
-
-        // Update the remaining code count
-        codeCount.textContent = codes.length;
+    // Function to update the remaining codes counter display
+    function updateRemainingCodesCounter() {
+        const remainingCounter = document.getElementById("remainingCodesCounter");
+        remainingCounter.textContent = "Remaining Codes: " + codes.length;
     }
 
-    // Initialize the app
-    updateCodeList();
+    // Function to generate multiple QR codes
+    function generateMultipleQRCodes() {
+        const numCodes = parseInt(document.getElementById("numCodes").value);
+        if (numCodes < 1 || numCodes > codes.length) {
+            alert("Invalid number of codes to generate!");
+            return;
+        }
+
+        // Clear previous codes from the grid
+        const codeGrid = document.getElementById("codeGrid");
+        codeGrid.innerHTML = '';
+
+        // Generate specified number of QR codes
+        for (let i = 0; i < numCodes; i++) {
+            if (codes.length === 0) {
+                alert("No more codes to display!");
+                break;
+            }
+
+            // Get a random index from the remaining codes
+            const randomIndex = Math.floor(Math.random() * codes.length);
+            const randomCode = codes[randomIndex];
+
+            // Remove the code from the list
+            codes.splice(randomIndex, 1);
+
+            // Save the updated list to localStorage
+            localStorage.setItem("remainingCodes", JSON.stringify(codes));
+
+            // Create a card element for the QR code
+            const cardDiv = document.createElement("div");
+            cardDiv.className = "card";
+
+            // Create a canvas for the QR code
+            const qrCanvas = document.createElement("canvas");
+            qrCanvas.className = "qr-code";
+
+            // Generate the QR code
+            new QRious({
+                element: qrCanvas,
+                value: randomCode,
+                size: 140  // QR code size
+            });
+
+            // Create a text element for the code
+            const codeTextDiv = document.createElement("div");
+            codeTextDiv.className = "code-text";
+            codeTextDiv.textContent = "Code: " + randomCode;
+
+            // Append QR code and text to the card
+            cardDiv.appendChild(qrCanvas);
+            cardDiv.appendChild(codeTextDiv);
+
+            // Append the card to the grid
+            codeGrid.appendChild(cardDiv);
+        }
+
+        // Update remaining codes display
+        updateRemainingCodesCounter();
+    }
+
+    // Function to reset localStorage (Triggered by "Do Not Press" button)
+    function resetCodes() {
+        if (confirm("Are you sure you want to reset the codes?")) {
+            localStorage.removeItem("remainingCodes");
+            codes = initialCodes; // Reset codes array to the initial list
+            alert("All codes have been reset!");
+            location.reload(); // Reload the page to reset the display
+        }
+    }
+
+    // Initialize the remaining codes display on page load
+    updateRemainingCodesCounter();
 </script>
 
 </body>
