--- a/eko/index.html
+++ b/eko/index.html
@@ -3,6 +3,6 @@
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta http-equiv="refresh" content="0; url=https://docs.google.com/presentation/d/1RSNgJmpFkM82EY9V9v2RtXvV6wWMWjOB/edit?usp=sharing&ouid=102021134694309696323&rtpof=true&sd=true" />
+   <meta http-equiv="refresh" content="0; url=https://docs.google.com/presentation/d/1LKDxIALhWupab1KcGajUItO7oM6yqdD_wxSW-VSODHE/edit?usp=sharing" />
  </head>
 </html>
