--- a/eko/index.html
+++ b/eko/index.html
@@ -3,6 +3,6 @@
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta http-equiv="refresh" content="0; url=https://docs.google.com/presentation/d/11rtO3bLHOMAX4f9ba_e2iQibACoWWV-DUsaNxn7Eu74/edit?usp=sharing" />
+   <meta http-equiv="refresh" content="0; url=https://drive.google.com/file/d/13snINUVQoio9_V_bIGklNZ2ce8O8uD2X/view?usp=sharing" />
  </head>
 </html>
